make collapse toggling more user-friendly fixes #11

--- a/yawdadmin/static/css/admin.css
+++ b/yawdadmin/static/css/admin.css
@@ -307,6 +307,11 @@ h2.affix-header, .affix-header h2 {
 	padding-left: 15px;
 }
 
+.collapse-switcher:hover {
+	cursor: pointer;
+	color: #555;
+}
+
 /* OBJECT TOOLS ICONS */
 
 .loading-item, .add-item, .addressbook-item, .agent-item, .apple-item, 
